add list elements

--- a/my-first-website.html
+++ b/my-first-website.html
@@ -7,6 +7,7 @@
     <title>My first Webpage</title>
 </head>
 <body>
-    
+    <h1>Helloo,world!</h1>
+    <h2>Welcome to my first webpage</h2>
 </body>
 </html>
