--- a/my-first-website.html
+++ b/my-first-website.html
@@ -9,5 +9,20 @@
 <body>
     <h1>Helloo,world!</h1>
     <h2>Welcome to my first webpage</h2>
+    <h2>Written with a little guidance from Moringa School</h2>
+    <p>Hello, world!</p>
+    <p>Welcome to my first web page!</p>
+
+    <p>Here are some things I'm going to learn about coding:</p>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>And a lot more!</li>
+    </ul>
+    <p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
+    <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
+    <img src="elephant.jpg" alt="A photo of an elephant">
+
 </body>
 </html>
